--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "^2.11.4",
+    "@react-navigation/bottom-tabs": "^7.5.0",
+    "@react-navigation/drawer": "^7.6.0",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.5.1",
     "expo": "~54.0.20",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-paper": "4.9.2",
-    "@expo/vector-icons": "^15.0.3"
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "~4.16.0"
   },
   "private": true
 }
